# AiTestToolQ

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: configuration.md  development.md  faq.md  installation.md  output.md  overview.md  safari_setup.md  scenario.md  scroll_feature.md  troubleshooting.md  usage.md
resources/: config.toml
resources/scenario/: default.csv
resources/url/: default.toml
resources/user/: default.toml
src/: __init__.py  __main__.py  action_handler.py  browser_session.py  concurrent_tester.py  config_loader.py  gui_main.py  main.py  scenario_loader.py
src/gui/: __init__.py  app.py  config_editor.py  main_window.py  result_viewer.py  scenario_editor.py  scenario_runner.py
src/gui/resources/translations/: aitesttoolq_en_US.tsx  aitesttoolq_ja_JP.tsx
src/gui/utils/: __init__.py  delegates.py  i18n.py  table_models.py
src/gui/widgets/: __init__.py  file_selector.py  log_viewer.py
src/utils/: browser_utils.py  constants.py  excel_report.py  file_utils.py  logger.py  toml_utils.py
tests/: README.md  conftest.py  test_action_handler.py  test_browser_session.py  test_concurrent_tester.py  test_config_loader.py  test_scenario_loader.py
tests/resources/: config.toml
tests/resources/scenario/: test.csv
tests/resources/url/: test.toml
tests/resources/user/: test.toml
tests/test_utils/: test_browser_utils.py  test_excel_report.py  test_file_utils.py  test_toml_utils.py
